Fix focus outline clipping again

--- a/assets/new.scss
+++ b/assets/new.scss
@@ -257,6 +257,10 @@ article {
       background: var(--langBackgroundColor);
     }
 
+    &:focus {
+      z-index: 1;
+    }
+
     &:before {
       content: "○";
       color: var(--borderColor);
